<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">iNews</string>
    <string name="capa">Capa</string>
    <string name="fonte">Fonte</string>
    <string name="data">Data</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descricao</string>
    <string name="conteudo">Conteudo</string>
    <string name="nome_do_jornal">Nome do Jornal</string>
    <string name="nao_foram_encontrados_artigos_para_este_jornal_no_momento" tools:ignore="Typos">Não foram encontrados artigos para este jornal no momento :X</string>
    <string name="pesquisar_materia">Pesquisar Matéria...</string>
    <string name="noticias">NOTÍCIAS</string>
    <string name="pais">País</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="filtrar">Filtrar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="argentina">Argentina</string>
    <string name="australia">Austrália</string>
    <string name="austria">Áustria</string>
    <string name="belgica">Bélgica</string>
    <string name="brasil">Brasil</string>
    <string name="bulgaria">Bulgária</string>
    <string name="canada">Canadá</string>
    <string name="china">China</string>
    <string name="colombia">Colômbia</string>
    <string name="cuba">Cuba</string>
    <string name="republica_checa">República Checa</string>
    <string name="egito">Egito</string>
    <string name="franca">França</string>
    <string name="alemanha">Alemanha</string>
    <string name="grecia">Grécia</string>
    <string name="hong_kong">Hong Kong</string>
    <string name="hungria">Hungria</string>
    <string name="india">Índia</string>
    <string name="indonesia">Indonésia</string>
    <string name="irlanda">Irlanda</string>
    <string name="israel">Israel</string>
    <string name="italia">Itália</string>
    <string name="japao">Japão</string>
    <string name="letonia">Letônia</string>
    <string name="lituania">Lituânia</string>
    <string name="malasia">Malásia</string>
    <string name="mexico">México</string>
    <string name="marrocos">Marrocos</string>
    <string name="paises_baixos">Países Baixos</string>
    <string name="nova_zelandia">Nova Zelândia</string>
    <string name="nigeria">Nigéria</string>
    <string name="noruega">Noruega</string>
    <string name="filipinas">Filipinas</string>
    <string name="polonia">Polônia</string>
    <string name="portugal">Portugal</string>
    <string name="romenia">Romênia</string>
    <string name="russia">Rússia</string>
    <string name="arabia_saudita">Arábia Saudita</string>
    <string name="servia">Sérvia</string>
    <string name="cingapura">Cingapura</string>
    <string name="eslovaquia">Eslováquia</string>
    <string name="eslovenia">Eslovênia</string>
    <string name="afica_do_sul">África do Sul</string>
    <string name="coreia_do_sul">Coréia do Sul</string>
    <string name="suecia">Suécia</string>
    <string name="suica">Suíça</string>
    <string name="taiwan">Taiwan</string>
    <string name="tailandia">Tailândia</string>
    <string name="emirados_arabes_unidos">Emirados Árabes Unidos</string>
    <string name="ucrania">Ucrânia</string>
    <string name="reino_unido">Reino Unido</string>
    <string name="eua">Estados Unidos</string>
    <string name="venezuela">Venezuela</string>
    <string name="jornais">JORNAIS</string>
    <string name="todas_as_categorias">Todas as Categorias</string>
</resources>
