<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".news.screen.ArcticleDetailsActivity"
    android:orientation="vertical"
    android:background="#212121">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:id="@+id/cardView_detalhes"
                app:cardCornerRadius="0dp"
                app:cardBackgroundColor="#212121">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:background="#ffffff">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient"
                            android:contentDescription="@string/capa" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/poster_noticia_detalhes"
                            android:src="@drawable/img"
                            android:scaleType="centerCrop"
                            android:contentDescription="@string/capa" />

                        <LinearLayout
                            android:id="@+id/linear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="bottom">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_gravity="bottom"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="5dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:shadowColor="@color/preto"
                                    android:shadowRadius="6.0"
                                    android:text="@string/fonte"
                                    android:textSize="22sp"
                                    android:textStyle="italic"
                                    android:textColor="@color/branco"
                                    android:maxLength="20"
                                    android:typeface="sans"
                                    android:id="@+id/fonte_noticia_detalhes"/>

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:shadowColor="@color/preto"
                                    android:shadowRadius="6.0"
                                    android:text="@string/data"
                                    android:textSize="15sp"
                                    android:gravity="end"
                                    android:textStyle="italic"
                                    android:textColor="@color/branco"
                                    android:id="@+id/data_noticia_detalhes"
                                    android:typeface="sans"/>

                            </LinearLayout>

                        </LinearLayout>

                    </FrameLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/titulo"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:typeface="sans"
                        android:textColor="@color/branco"
                        android:id="@+id/manchete_noticia_detalhes"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descricao"
                        android:textSize="15sp"
                        android:padding="10dp"
                        android:textColor="@color/branco"
                        android:id="@+id/descricao_noticia_detalhes"
                        android:typeface="sans"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/conteudo"
                        android:textSize="15sp"
                        android:padding="10dp"
                        android:textColor="@color/branco"
                        android:id="@+id/conteudo_noticia_detalhes"
                        android:typeface="sans"
                        android:ellipsize="end"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="10dp">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/load_webpage"/>

                <WebView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/webView_noticia"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>