<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical"
    android:id="@+id/item_arcticle_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <ImageView
            android:id="@+id/gradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            android:contentDescription="@string/capa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linear"/>

        <ImageView
            android:id="@+id/poster_noticia_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/gradient"
            android:contentDescription="@string/capa"
            android:scaleType="centerCrop"
            android:src="@drawable/img"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintHorizontal_bias="0.5"/>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:orientation="vertical"
            app:layout_constraintVertical_bias="1">

            <TextView
                android:id="@+id/manchete_noticia_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="10dp"
                android:text="@string/titulo"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fonte_noticia_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fonte"
                    android:textColor="#212121"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/data_noticia_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/data"
                    android:textColor="#212121"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

   <!-- <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            android:contentDescription="@string/capa" />

        <ImageView
            android:id="@+id/poster_noticia_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/capa"
            android:scaleType="centerCrop"
            android:src="@drawable/img" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manchete_noticia_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="10dp"
                android:text="@string/titulo"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fonte_noticia_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/fonte"
                    android:textColor="#212121"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/data_noticia_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/data"
                    android:textColor="#212121"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#CCCCCC" />
</LinearLayout>